networkpolicy/examples/denycrossnamespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-cross-namespace
  namespace: team-a
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: team-a
  - to:
    - namespaceSelector:
        matchLabels:
          name: team-a
