networkpolicy/examples/examplenetpol.yaml
# Used for screenshots in presentation
## DO NOT APPLY THIS FILE IN A CLUSTER ##
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: example-network-policy
spec:
  podSelector: # Selects pods the policy applies to
    matchLabels:
      role: db
  policyTypes: # Define the types of traffic to be controlled
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          project: myproject
  egress:
  - to:
    - ipBlock:
        cidr: 10.0.0.0/24
